--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
     "bytic/cookie": "^1.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "2.*",
-    "codeception/codeception": "2.2.*",
-    "codeception/mockery-module": "0.2.*"
+    "phpunit/phpunit": "^7.2",
+    "mockery/mockery": "^1.1"
   }
 }
