--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "bytic/cookie": "^0.9|^1.0",
     "bytic/helpers": "^0.9|^1.0",
     "bytic/orm": "^0.9|^1.0",
-    "bytic/persistent-data": "^1.0"
+    "bytic/persistent-data": "^1.0",
+    "lcobucci/jwt": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.2",
