--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,16 @@
     }
   },
   "require": {
-    "php": ">=5.5.0",
+    "php": ">=7.0",
     "bytic/controllers": "^0.9|^1.0",
     "bytic/cookie": "^0.9|^1.0",
     "bytic/helpers": "^0.9|^1.0",
     "bytic/orm": "^0.9|^1.0",
     "bytic/persistent-data": "^1.0",
-    "symfony/security": "^4.4",
-    "lcobucci/jwt": "^3.3"
+    "symfony/security": "^4.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.2",
+    "phpunit/phpunit": "^7.2|^8.0",
     "mockery/mockery": "^1.1"
   }
 }
