--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,15 @@
     }
   },
   "require": {
-    "php": ">=7.0",
     "bytic/controllers": "^0.9|^1.0",
     "bytic/cookie": "^0.9|^1.0",
     "bytic/helpers": "^0.9|^1.0",
     "bytic/orm": "^0.9|^1.0",
     "bytic/persistent-data": "^1.0",
-    "symfony/security": "^4.4"
+    "symfony/security": "^4.4|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.2|^8.0",
+    "phpunit/phpunit": "^7.2|^8.0|^9.0",
     "mockery/mockery": "^1.1"
   }
 }
