--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "bytic/orm": "^0.9|^1.0",
     "bytic/persistent-data": "^1.0",
     "symfony/security-core": "^4.4|^5.0",
-    "symfony/security-guard": "^4.4|^5.0"
+    "symfony/security-guard": "^4.4|^5.0",
+    "lcobucci/jwt": "^4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.2|^8.0|^9.0",
