update user models to use new guards

--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
   ],
   "autoload": {
     "psr-4": {
+      "ByTIC\\Auth\\Legacy\\": "legacy/",
       "ByTIC\\Auth\\": "src/"
     },
     "classmap": [
       "legacy"
+    ],
+    "files": [
+      "src/functions/application.php"
     ]
   },
   "autoload-dev": {
@@ -32,7 +36,22 @@
     "lcobucci/jwt": "^4.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.2|^8.0|^9.0",
+    "bytic/phpqatools": "^1.0",
     "mockery/mockery": "^1.1"
+  },
+  "scripts": {
+    "tests": [
+      "@analyse",
+      "@test"
+    ],
+    "test": [
+      "phpunit"
+    ],
+    "analyse": [
+      "@stan",
+      "@psalm"
+    ],
+    "stan": "phpstan analyse",
+    "psalm": "psalm --output-format=compact --find-dead-code --find-unused-psalm-suppress --long-progress "
   }
 }
