feat: update to new authenticator

--- a/composer.json
+++ b/composer.json
@@ -38,22 +38,16 @@
     "lcobucci/jwt": "^4.1"
   },
   "require-dev": {
-    "bytic/phpqatools": "^1.0",
-    "mockery/mockery": "^1.1"
+    "bytic/phpqatools": "^1.0"
   },
-  "scripts": {
-    "tests": [
-      "@analyse",
-      "@test"
-    ],
-    "test": [
-      "phpunit"
-    ],
-    "analyse": [
-      "@stan",
-      "@psalm"
-    ],
-    "stan": "phpstan analyse",
-    "psalm": "psalm --output-format=compact --find-dead-code --find-unused-psalm-suppress --long-progress "
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "phpstan/extension-installer": true,
+      "ergebnis/composer-normalize": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "bytic/phpqatools": true
+    }
   }
 }
