--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,11 @@
     "bytic/cookie": "^0.9|^1.0",
     "bytic/helpers": "^0.9|^1.0",
     "bytic/orm": "^0.9|^1.0",
-    "bytic/persistent-data": "^1.0",
+    "bytic/persistent-data": "^1.0|^2.0",
     "symfony/security-core": "^5.3|^6.0",
     "symfony/security-guard": "^5.3|^6.0",
     "lexik/jwt-authentication-bundle": "^2.12",
-    "lcobucci/jwt": "^4.1"
+    "lcobucci/jwt": "^4.1|^5.0"
   },
   "require-dev": {
     "bytic/phpqatools": "^1.0"
